# zsh-patina

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  build.rs  zsh-patina.plugin.zsh
.github/skills/changelog-conventions/: SKILL.md
.github/skills/highlighter-tests/: SKILL.md
.github/workflows/: ci.yaml  release.yaml
assets/completions/: _zsh-patina
src/: check.rs  color.rs  config.rs  daemon.rs  highlighter.rs  main.rs  path.rs  theme.rs  unbackslash.rs
src/commands/: check.rs  completion.rs  listscopes.rs  listthemes.rs  mod.rs  tokenize.rs
src/highlighting/: dynamic.rs  highlighter.rs  historyexpansion.rs  mod.rs
src/highlighting/snapshots/: zsh_patina__highlighting__highlighter__tests__argument_is_directory__simple.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__ansi_quotes.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__double_quotes.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__double_quotes_inside_filenames.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__double_quotes_test_1.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__escape_whitespace.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__filename_with_spaces_is_not_a_path.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__simple.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__single_quotes.snap  zsh_patina__highlighting__highlighter__tests__argument_is_file__spaces.snap  zsh_patina__highlighting__highlighter__tests__argument_is_partial_directory__simple.snap  zsh_patina__highlighting__highlighter__tests__argument_is_partial_file__simple.snap  zsh_patina__highlighting__highlighter__tests__builtin__echo.snap  zsh_patina__highlighting__highlighter__tests__case_with_heredoc.snap  zsh_patina__highlighting__highlighter__tests__command__bigv.snap  zsh_patina__highlighting__highlighter__tests__command__bigv_command_with_p.snap  zsh_patina__highlighting__highlighter__tests__command__bigv_p_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__bigv_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__echo.snap  zsh_patina__highlighting__highlighter__tests__command__end_of_options.snap  zsh_patina__highlighting__highlighter__tests__command__p.snap  zsh_patina__highlighting__highlighter__tests__command__p_bigv_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__p_command_with_bigv.snap  zsh_patina__highlighting__highlighter__tests__command__p_end_of_options.snap  zsh_patina__highlighting__highlighter__tests__command__p_v_bigv.snap  zsh_patina__highlighting__highlighter__tests__command__p_v_bigv_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__p_with_double_quoted_file.snap  zsh_patina__highlighting__highlighter__tests__command__p_with_file.snap  zsh_patina__highlighting__highlighter__tests__command__v.snap  zsh_patina__highlighting__highlighter__tests__command__v_end_of_options_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__v_two_commands.snap  zsh_patina__highlighting__highlighter__tests__command__v_two_commands_double_quoted.snap  (+159 more)
templates/: zsh-patina.zsh
tests/: Dockerfile  integration_test.rs
tests/themes/: all-ways.toml
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  classic.toml  kanagawa.toml  lavender.toml  nord.toml  patina.toml  simple.toml  solarized.toml  tokyonight.toml
