[package]
name = "zsh-patina"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
figment = { version = "0.10.19", features = ["toml"] }
libc = "0.2.182"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy"] }
termcolor = "1.4.1"

[build-dependencies]
anyhow = "1.0.102"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "plist-load", "regex-fancy", "yaml-load"] }
