[package]
name = "zsh-patina"
version = "1.0.0"
edition = "2024"
authors = ["Michel Krämer <michel@undercouch.de>"]
license = "MIT"
description = "$ A blazingly fast Zsh plugin performing syntax highlighting of your command line while you type 🌈"
readme = "README.md"
homepage = "https://github.com/michel-kraemer/zsh-patina"
repository = "https://github.com/michel-kraemer/zsh-patina"
keywords = ["shell", "zsh", "syntax", "highlighting", "syntax-highlighting"]
categories = ["command-line-utilities"]
rust-version = "1.88"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
figment = { version = "0.10.19", features = ["toml"] }
libc = "0.2.182"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy"] }
termcolor = "1.4.1"
toml = "1.0.6"

[build-dependencies]
anyhow = "1.0.102"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "plist-load", "regex-fancy", "yaml-load"] }
