[package]
name = "zsh-patina"
version = "1.5.1"
edition = "2024"
authors = ["Michel Krämer <michel@undercouch.de>"]
license = "MIT"
description = "$ A blazingly fast Zsh plugin performing syntax highlighting of your command line while you type 🌈"
readme = "README.md"
homepage = "https://github.com/michel-kraemer/zsh-patina"
repository = "https://github.com/michel-kraemer/zsh-patina"
keywords = ["shell", "zsh", "syntax", "highlighting", "syntax-highlighting"]
categories = ["command-line-utilities"]
rust-version = "1.88"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
clap_complete = "4.6.0"
dirs = "6.0.0"
env_logger = { version = "0.11.10", default-features = false, features = ["humantime"]}
figment = { version = "0.10.19", features = ["toml"] }
libc = "0.2.184"
log = "0.4.29"
rayon = "1.11.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
strum = { version = "0.28.0", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy"] }
tempfile = "3.27.0"
termcolor = "1.4.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
toml = "1.1.2"

[build-dependencies]
anyhow = "1.0.102"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "regex-fancy", "yaml-load"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
testcontainers = "0.27.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
